--- a/sass/_singlefolio.scss
+++ b/sass/_singlefolio.scss
@@ -100,6 +100,11 @@ a.previous-link{
 	margin: 0 auto;
 	padding: $padding*1.5 $padding*2;
 	position: relative;
+	
+	@include width-below(850px){
+		padding-left: 0;
+		padding-right: 0;
+	}
 
 	.img-peripherique{
 		transition: background-position ease-in-out 5s;
