--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -10,6 +10,11 @@
 }
 
 .form{
+	
+	@include width-below(600px){
+		text-align: center;
+	}
+	
 	label{
 		font-weight: 900;
 		font-size: 2rem;
@@ -25,6 +30,7 @@
 		padding: 15px 20px;
 		font-size: 1.6rem;
 		color: $noir;
+		outline: 0;
 
 		&.wpcf7-not-valid{
 			//border: 2px solid red;
