--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -1,5 +1,5 @@
 @include width-above(900px){
-
+/*
 .wrapper-top,
 .big-header h1,
 big-title,
@@ -13,6 +13,6 @@ big-title,
 .footer{
 	visibility: hidden;
 }
-	
+*/	
 		
 }
