--- a/sass/_general-layout.scss
+++ b/sass/_general-layout.scss
@@ -1,96 +1,95 @@
-*{
+* {
 	box-sizing: border-box;
 }
 
-html{
+html {
 	font-size: 62.5%;
 	background-color: #efefef;
 	font-family: Lato, Hevetica, Arial, sans-serif;
 	font-weight: 500;
 }
 
-body{
+body {
 	padding: $espace;
 	font-size: 1.6rem;
 	color: $noir;
 }
 
-img{
+.home {
+	padding-bottom: 0;
+}
+
+img {
 	max-width: 100%;
 	height: auto;
 }
 
-.svg-wrapper{
+.svg-wrapper {
 	display: none;
 }
 
-.content{
+.content {
 	background-color: #fff;
 	padding: $padding;
 	text-align: center;
 }
 
 //HEADER
-
-header{
+header {
 	padding: $padding;
-	position: relative;
 	overflow: hidden;
-
-	@include width-below(500px){
+	@include width-below(500px) {
 		padding: $padding*0.5;
 	}
-	
 	min-height: calc(75vh);
 	display: flex;
 	flex-direction: column;
 }
 
-.accueil header{
+.accueil header {
 	min-height: calc(100vh - 2 * #{$espace});
+	position: relative;
 }
 
-.img-background{
+.img-background {
 	z-index: -2;
 	position: absolute;
-	top:0;
+	top: 0;
 	right: 0;
 	bottom: 0;
-	left:0;	
-
-	&:after{
-		content:'';
+	left: 0;
+	&:after {
+		content: '';
 		background-size: cover;
 		background-position: center center;
 		background-repeat: no-repeat;
 		position: absolute;
-		top:0;
+		top: 0;
 		right: 0;
 		bottom: 0;
-		left:0;
+		left: 0;
 		opacity: .4;
 		z-index: -1;
 		mix-blend-mode: multiply;
 	}
 }
 
-body:not(.single-portfolio) .img-background{
+body:not(.single-portfolio) .img-background {
 	background-image: linear-gradient(to left, adjust-hue($rouge, -5deg), $rouge);
 }
 
-.wrapper-top{
+.wrapper-top {
 	display: flex;
 	align-items: center;
-	flex-wrap: wrap;	
+	flex-wrap: wrap;
 }
 
-.logo{
-	flex:2;
-	text-decoration: none;
-	color: #fff;
+.logo {
+	flex: 2;
+	position: relative;
+	z-index: 103;
 	text-transform: uppercase;
-	
-	.site-title{
+	.site-title {
 		font-size: 4rem;
 		font-weight: 900;
 		border: 2px solid #ffffff;
@@ -100,142 +99,156 @@ body:not(.single-portfolio) .img-background{
 		overflow: hidden;
 		letter-spacing: 50px;
 	}
+	a {
+		text-decoration: none;
+		color: #fff;
+	}
 }
 
-.nav{
-	
-	font-size: 1.75rem;
-	font-weight: 800;
+.nav {
+	transition: all ease .4s;
+	background-color: $rouge;
+	position: fixed;
+	height: 100vh;
+	top: -1000px;
+	left: 0;
+	width: 100vw;
+	font-size: 4rem;
+	font-weight: 900;
 	z-index: 100;
-
-	@include width-below(1200px){
-		font-size: 1.5rem;
+	text-align: center;
+	display: flex;
+	border: $espace solid $grisfonce;
+	ul {
+		margin: auto;
 	}
-	
-
-	@include width-below(950px){
-		transition: all ease .3s;
-		width: 100%;
-		padding-top: 50px;
-		display: none;
-		transform-origin: center top;
+	li:not(:last-child) a {
+		margin-bottom: 1rem;
 	}
-
-	&.open{
-		display: block;
-	}
-
-	li{
+	a {
 		display: inline-block;
-
-		@include width-below(950px){
-			width: 100%;
-			text-align: center;
-
-			a{
-				display: block;
-			}
-		}
-	}
-
-	a{
-		transition: all ease .25s;
-		display: inline-block;
+		line-height: 1.3em;
 		color: #fff;
 		text-decoration: none;
-		padding: 1em 1.5em;
-		position: relative;
+		text-transform: uppercase;
 	}
 }
 
-.bt-menu{
+.nav.open {
+	top: 0;
+}
 
-	font-size: 1.8rem;
-	font-weight: 900;
-	
-	color: #fff;
+.bt-menu {
+	display: inline-block;
+	height: 44px;
 	cursor: pointer;
-
-	@include width-above(951px){
-		display: none;
-	}
-
-	&::before{
+	padding: 10px;
+	position: relative;
+	z-index: 101;
+	span {
 		transition: all ease .4s;
-		content:'';
-		display: inline-block;
-		margin-right: 7px;
-		height: 7px;
-		width: 7px;
+		height: 2px;
+		width: 30px;
 		background-color: #fff;
-		transform: translateY(-50%);
-		box-shadow: 0 9px #fff, 0px -9px #fff;
+		display: inline-block;
+		position: relative;
 	}
-
-	&.open{
-		&::before{
-			box-shadow: 9px 9px #fff, -9px -9px #fff, -9px 9px #fff, 9px -9px #fff;
-			margin-right: 20px;
+	span::before {
+		transition: all ease .4s;
+		content: '';
+		position: absolute;
+		height: 2px;
+		width: 30px;
+		background-color: #fff;
+		display: inline-block;
+		top: -10px;
+	}
+	span::after {
+		transition: all ease .4s;
+		content: '';
+		position: absolute;
+		height: 2px;
+		width: 30px;
+		background-color: #fff;
+		display: inline-block;
+		top: 10px;
+	}
+	&:hover {
+		span::before {
+			top: -13px;
+		}
+		span::after {
+			top: 13px;
 		}
 	}
 }
 
-header{
+//MEnu ouvert
+.bt-menu.open {
+	position: relative;
+	span {
+		height: 0;
+	}
+	span::before {
+		transform: rotate(45deg);
+		top: 0;
+	}
+	span::after {
+		transform: rotate(-45deg);
+		top: 0;
+	}
+}
+
+header {
 	margin-bottom: $espace;
 }
 
-.big-header{
+.big-header {
 	padding: 100px 0;
-	text-align:center;
+	text-align: center;
 	color: #fff;
 	margin: auto;
-
-	.bt{
+	.bt {
 		@extend %bt;
 		font-size: 2.25rem;
 		margin-top: 1.5em;
 		position: relative;
-
-		@include width-below(600px){
+		@include width-below(600px) {
 			font-size: 2rem;
 		}
 	}
 }
 
-.big-title{	
+.big-title {
 	font-size: 8.5rem;
 	font-weight: 900;
 	text-transform: uppercase;
-
-	@include width-below(1000px){
+	@include width-below(1000px) {
 		font-size: 7rem;
 	}
-
-	@include width-below(600px){
+	@include width-below(600px) {
 		font-size: 5rem;
 		margin-bottom: .15em;
 	}
 }
 
-.sous-title{
+.sous-title {
 	font-size: 3.5rem;
 	line-height: 1.1em;
 	font-weight: 800;
-
-	@include width-below(1000px){
+	@include width-below(1000px) {
 		font-size: 3rem;
 	}
-
-	@include width-below(600px){
+	@include width-below(600px) {
 		font-size: 2rem;
 	}
 }
 
-.ico-scroll{	
-	.icons-scroll::after{
+.ico-scroll {
+	.icons-scroll::after {
 		position: absolute;
 		left: calc(50% - 6px);
-		content:'';
+		content: '';
 		display: block;
 		height: 10px;
 		width: 10px;
@@ -244,11 +257,10 @@ header{
 		transform: rotate(45deg);
 		animation: scroll 1.7s ease-in-out infinite;
 	}
-	
-	.icons-scroll::before{
+	.icons-scroll::before {
 		position: absolute;
 		left: calc(50% - 6px);
-		content:'';
+		content: '';
 		display: block;
 		height: 10px;
 		width: 10px;
@@ -257,34 +269,31 @@ header{
 		transform: rotate(45deg);
 		animation: scroll2 1.7s ease-in-out infinite;
 	}
-	
-	@keyframes scroll{
-		0%{
+	@keyframes scroll {
+		0% {
+			bottom: 45px;
+		}
+		50% {
 			bottom: 35px;
 		}
-		50%{
-			bottom: 25px;
-		}
-		100%{
-			bottom: 35px;
+		100% {
+			bottom: 45px;
 		}
 	}
-	
-	@keyframes scroll2{
-		0%{
-			bottom: 42px;
+	@keyframes scroll2 {
+		0% {
+			bottom: 52px;
 		}
-		50%{
-			bottom: 35px;
+		50% {
+			bottom: 45px;
 		}
-		100%{
-			bottom: 42px;
+		100% {
+			bottom: 52px;
 		}
 	}
-	
-	svg{
-		position: 	absolute;
-		bottom: 50px;
+	svg {
+		position: absolute;
+		bottom: 70px;
 		left: calc(50% - 25px);
 		height: 50px;
 		width: 50px;
@@ -292,225 +301,74 @@ header{
 	}
 }
 
-.text-content{
-
-	h2{
+.text-content {
+	h2 {
 		@extend %h2;
 		margin-bottom: .75em;
 	}
-
-	p{
+	p {
 		line-height: 1.5em;
 		max-width: 800px;
 		margin: 0 auto 1em;
 		font-size: 1.5rem;
-
-		strong{
+		strong {
 			font-weight: bold;
 		}
 	}
-
-	a{
+	a {
 		transition: color ease .25s;
 		color: inherit;
 		font-weight: bold;
-
-		&:hover{
+		&:hover {
 			color: $rouge;
 		}
-
-		&:not([href*="herrloc.fr"])::after{
-			content:' [...]';
+		&:not([href*="herrloc.fr"])::after {
+			content: ' [...]';
 		}
 	}
-
-	p + h2{
+	p+h2 {
 		margin-top: 1.4em;
 	}
 }
 
 // Titres
-
-.section-title{
+.section-title {
 	margin-bottom: 30px;
 	text-align: center;
-	
-	h2{
+	h2 {
 		font-size: 5rem;
 		font-weight: 900;
 		margin-bottom: 5px;
-		
-		@include width-below(600px){
+		@include width-below(600px) {
 			font-size: 3.5rem;
 		}
 	}
-	
-	p{
+	p {
 		font-size: 2rem;
 	}
 }
 
 // Offre home + page offre
-
-.offre-wrapper{
-	
+.offre-wrapper {
 	text-align: center;
 	background: linear-gradient(to bottom, #fff, $grisfonce);
 	padding: 1.5*$padding $padding 175px;
 	margin-bottom: 75px;
-	
-	@include width-below(1000px){
+	@include width-below(1000px) {
 		margin-bottom: 100px;
 	}
-	
-	@include width-below(950px){
+	@include width-below(950px) {
 		margin-bottom: 0;
 		padding-bottom: $padding;
 	}
-	
-	.img-args{
+	.img-args {
 		position: relative;
 		display: inline-block;
 	}
-	
-	.img-args img{
+	.img-args img {
 		max-width: 50%;
-		
-		@include width-below(950px){
+		@include width-below(950px) {
 			max-width: 90%;
-		}
-	}
-}
-
-.argu{
-	
-	div{
-		
-		@include width-above(949px){
-			
-			position:absolute;
-			max-width: 25%;
-			z-index: 1000;
-			padding: $padding/2;
-
-			&:nth-child(1){
-				text-align: right;
-				top: 4%;
-				left: 4%;
-
-				@include width-below(1250px){
-					top:0;
-					left: 2%;
-				}
-
-				h3::after{
-					right: 0;
-				}
-
-			}
-
-			&:nth-child(2){
-				text-align: left;
-				right: calc(-.5% + #{$padding}/2);
-				top: calc(52.9% - #{$padding}/2);
-			}
-
-			&:nth-child(3){
-				text-align: right;
-				right: calc(58% - #{$padding}/2;
-				top: 95.5%;
-
-				h3::after{
-					right: 0;
-				}
-			}
-		}
-		
-		@include width-below(950px){
-			margin-top: $padding;
-		}
-
-	}
-	
-	h3{
-		font-weight: 900;
-		font-size: 1.85rem;
-		color: $rouge;
-		margin-bottom: .8em;
-		position: relative;
-		display: inline-block;
-		
-		
-		&::after{
-			content:'';
-			display: block;
-			height: 2px;
-			width: 50%;
-			position: absolute;
-			background-color: $rouge;
-			bottom: -7px;
-		}
-	}
-	
-	p{
-		font-weight: 500;
-		line-height: 1.3em;
-	}
-	
-	a{
-		transition: all ease .2s;
-		@extend %bt;
-		margin-top: 1em;
-		color: $rouge;
-		border-color: $rouge;
-		
-		&:hover{
-			color: adjust-hue($rouge, -18deg);
-			border-color: adjust-hue($rouge, -18deg);
-			background-color: #fff;
-			border-width: 3px;
-		}
-	}
-	
-}
-
-.nav_secondary{
-	border-bottom: 1px solid #e6e6e6;
-	text-align: center;
-	margin-bottom: 50px;
-
-	li{
-		display: inline-block;
-		padding: 0 10px;
-	}
-
-	a{
-		transition: all ease .2s;
-		display: block;
-		padding: 10px 5px;
-		text-decoration: none;
-		color: inherit;
-		font-weight: 900;
-		font-size: 1.5rem;
-		cursor: pointer;
-		border-bottom: 6px solid transparent;
-
-		&:hover{
-			color: $rouge;
-		}
-		
-		@include width-below(800px){
-			border-bottom-width: 3px;
-		}
-	}
-
-	.current-menu-item a,
-	.current-menu a{
-		border-bottom: 6px solid $rouge;
-		color: $rouge;
-		
-		@include width-below(800px){
-			border-bottom-width: 3px;
 		}
 	}
 }
