--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -69,7 +69,6 @@
 .pad-folio{
 	display: block;
 	background-color: $rouge;
-	text-align: center;
 	margin-bottom: $espace;
 	margin-right: $espace;
 	padding: $padding*.9 $padding*1.2 $padding;
@@ -127,19 +126,20 @@
 	}	
 
 	.wrapper-img{
-		margin-bottom: 35%;
+		margin-bottom: 14%;
 		position: relative;
 	}
 
 	h2{
 		color: #fff;
-		font-size: 2.5rem;
+		font-size: 2rem;
 		font-weight: 900;
 		margin-bottom: .2em;
+		text-transform: uppercase;
 	}
 
 	p{
-		font-weight: 800;
+		font-weight: 500;
 		color: #fff;
 	}
 }
@@ -165,9 +165,9 @@
 	//Screen
 	width: 100%;
 	height: 220px;
-	border: 10px solid #383838;	
-	border-radius: 7px 7px 0 0;	
+	border-radius: 7px;	
 	position: relative;
+	box-shadow: -10px -10px 30px 0px rgba(#000, .3);
 
 	.wrapper-peripherique{
 		height: 200px;
@@ -204,10 +204,8 @@
 	width: 16%;
 	height: 90px;
 	border-radius: 5px;
-	border-color: #eee;
-	border-width: 8px 3px 12px 3px;
-	right: 35%;
-	top: 93%;
+	right: 10%;
+	top: 60%;
 	position: absolute;
 	box-shadow: -6px -6px 20px 0px rgba(#000, .4);
 
