--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -202,7 +202,7 @@
 
 	//Screen
 	width: 16%;
-	height: 90px;
+	height: 50%;
 	border-radius: 5px;
 	right: 10%;
 	top: 60%;
@@ -210,7 +210,7 @@
 	box-shadow: -6px -6px 20px 0px rgba(#000, .4);
 
 	.wrapper-peripherique{
-		height: 90px;
+		height: 50%;
 		overflow: hidden;
 	}
 }
