--- a/assets/css/_general-layout.scss
+++ b/assets/css/_general-layout.scss
@@ -6,7 +6,7 @@ html {
 	font-size: 62.5%;
 	background-color: #efefef;
 	font-family: 'Wotfard', Hevetica, Arial, sans-serif;
-	font-weight: 500;
+	font-weight: 400;
 	scroll-behavior: smooth;
 }
 
@@ -56,23 +56,27 @@ header {
 .img-background {
 	z-index: -2;
 	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
 	overflow: hidden;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 	
 	img{
 		object-fit: cover;
 		width: 100%;
 		height: 100%;
 		mix-blend-mode: multiply;
-		opacity: .8;
+		opacity: .3;
 	}
 }
 
 body:not(.single-portfolio) .img-background {
 	background-image: linear-gradient(to left, adjust-hue($rouge, -15deg), $rouge);
+
+	img{
+		opacity: .8;
+	}
 }
 
 .wrapper-top {
@@ -331,13 +335,13 @@ header {
 		margin: 0 0 1em;
 		font-size: 1.5rem;
 		strong {
-			font-weight: bold;
+			font-weight: 500;
 		}
 	}
 	a {
 		transition: color ease .25s;
 		color: inherit;
-		font-weight: bold;
+		font-weight: 500;
 		&:hover {
 			color: $rouge;
 		}
