--- a/views/templates/portfolio.twig
+++ b/views/templates/portfolio.twig
@@ -2,6 +2,10 @@
 
 {% block contentHeader %}
 
+<div class="img-background">
+    <img src="{{ post.thumbnail.src('header') }}" srcset="{{ post.thumbnail.src('header') }} 1920w, {{ post.thumbnail.src('header-mobile')}} 960w " alt="">
+</div>
+
 {% if post.couleur_de_fond is not empty %}
 
 <style>
@@ -18,25 +22,15 @@
 	<div class="sous-title">{{ post.meta('sous-titre_page_single') }}</div>
 
 	<div class="infos">
-		<div class="date_site">
-			<span>
-				<svg viewBox="0 0 100 100" width="30" height="30" class="icon">
-				  <use xlink:href="#icon-date"></use>
-				</svg>
-			</span>
+		<div class="date-site">
 			{{ post.meta('date_de_creation') }}
 		</div>
 
 
 		{% if post.lien_site is not empty %}
 
-		<a href="{{ post.meta('lien_site') }}" class="lien_site">
+		<a href="{{ post.meta('lien_site') }}" class="lien-site">
 			<div>
-				<span>
-					<svg viewBox="0 0 100 100" width="30" height="30" class="icon">
-						<use xlink:href="#icon-lien"></use>
-					</svg>
-				</span>
 				<span class="text-link">Voir le site</span>
 			</div>
 		</a>
@@ -47,22 +41,28 @@
 
 	<div class="link-other">
 
+		{% if prevPost is not empty %}
 
-		<a href="#" class="previous-link">
-			<div>
-				Projet précédent <br>
-				<span>titre</span>
-			</div>
+			<a href="{{ prevPost.link }}" class="previous-link">
+				<div>
+					Projet précédent <br>
+					<span>{{ prevPost.title }}</span>
+				</div>
 
-		</a>
+			</a>
 
-		<a href="#" class="next-link">
-			<div>
-				Projet suivant<br>
-				<span><titre</span>
-			</div>
-		</a>
+		{% endif %}	
 
+		{% if nextPost is not empty %}
+
+			<a href="{{ nextPost.link }}" class="next-link">
+				<div>
+					Projet suivant<br>
+					<span>{{ nextPost.title }}</span>
+				</div>
+			</a>
+
+		{% endif %}		
 
 	</div>
 
@@ -91,10 +91,6 @@
 	{% if post.galerie is not empty %}
 
 	<div class="gallery">
-
-		<span class="img-background">
-            <img src="{{ post.thumbnail.src('header') }}" srcset="{{ post.thumbnail.src('header') }} 1920w, {{ post.thumbnail.src('header-mobile')}} 960w " alt="">
-        </span>
 		
 		{% for image in post.meta('galerie') %}
 
