--- a/wp-content/themes/herrloc23/views/template-parts/folio-in-list.twig
+++ b/wp-content/themes/herrloc23/views/template-parts/folio-in-list.twig
@@ -1,4 +1,4 @@
-<li class="folio" data-anim="top">
+<li class="folio" data-anim="bottom">
     <a href="{{ folio.link }}">
         <div class="folio__content wrapper">
             <h2 class="folio__title">{{ folio.title }}</h2>
