--- a/wp-content/themes/herrloc23/assets/css/components/_skills.scss
+++ b/wp-content/themes/herrloc23/assets/css/components/_skills.scss
@@ -40,4 +40,30 @@
     font-size: .9em;
     margin-top: .7em;
   }
+
+  &__list{
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 1em;
+
+    &__single{
+      text-transform: uppercase;
+      font-size: .8em;
+      font-weight: 500;
+      display: contents;
+
+      &:not(:first-child)::before{
+        content:'';
+        display: block;
+        width: .8rem;
+        height: .8rem;
+        margin-left: 1em;
+        margin-right: 1em;
+        background-color: var(--color-primary);
+        border-radius: 100%;
+      }
+    }
+  }
 }
