--- a/wp-content/themes/herrloc23/assets/css/styles.scss
+++ b/wp-content/themes/herrloc23/assets/css/styles.scss
@@ -21,8 +21,10 @@
 @import "components/folio-list";
 @import "components/folio-block";
 @import "components/infocursor";
+@import "components/page-title";
 
 // Flexible
 
 // Pages
 @import "pages/frontpage";
+@import "pages/skills";
