--- a/wp-content/themes/herrloc23/assets/css/config/_variables.scss
+++ b/wp-content/themes/herrloc23/assets/css/config/_variables.scss
@@ -8,6 +8,7 @@
   //--color-pink: #1d1eb6;
   --color-white: #fdf5f5;
   --color-brown: #EAE2E2;
+  --color-green: #4ae894;
 
   --color-primary: var(--color-red);
   --color-secondary: var(--color-brown);
