--- a/wp-content/themes/herrloc23/assets/css/styles.scss
+++ b/wp-content/themes/herrloc23/assets/css/styles.scss
@@ -2,7 +2,6 @@
 @import "config/reset";
 
 @import "config/variables";
-@import "config/mixins";
 
 @import "config/font";
 @import "config/base";
@@ -22,6 +21,7 @@
 @import "components/folio-block";
 @import "components/infocursor";
 @import "components/page-title";
+@import "components/contact-form";
 
 // Flexible
 
