--- a/wp-content/themes/herrloc23/views/base.twig
+++ b/wp-content/themes/herrloc23/views/base.twig
@@ -12,6 +12,15 @@
     </head>
 
     <body class="{{body_class}}">
+
+        <noscript>
+            <style>
+                .v-hidden{
+                    visibility: visible;
+                }
+            </style>
+        </noscript>
+
         <div class="global-wrapper">
             {{ fn('wp_body_open') }}
 
