--- a/wp-content/themes/herrloc23/views/block/folio.twig
+++ b/wp-content/themes/herrloc23/views/block/folio.twig
@@ -9,7 +9,7 @@
         {% endif %}
     </header>
 
-    <ul class="folios">
+    <ul class="folios v-hidden">
         {% for folio in fields.folio %}
             {% include('template-parts/folio-in-list.twig') %}
         {% endfor %}
