--- a/wp-content/themes/herrloc23/views/block/skills.twig
+++ b/wp-content/themes/herrloc23/views/block/skills.twig
@@ -1,5 +1,5 @@
 <section class="wrapper">
-    <ul class="skills">
+    <ul class="skills v-hidden">
         {% for skill in fields.skills %}
             <li class="skill">
                 <span class="skill__abbr">{{ skill.meta('abbreviation') }}</span>
