--- a/wp-content/themes/herrloc23/views/template-parts/header.twig
+++ b/wp-content/themes/herrloc23/views/template-parts/header.twig
@@ -1,4 +1,4 @@
-<header class="wrapper header">
+<header class="wrapper header v-hidden">
      <a class="logo" href="{{ site.url }}" data-back="Home">{{ site.title }}</a>
 
     <div class="availability">
