--- a/wp-content/themes/herrloc23/assets/css/styles.scss
+++ b/wp-content/themes/herrloc23/assets/css/styles.scss
@@ -22,9 +22,11 @@
 @import "components/infocursor";
 @import "components/page-title";
 @import "components/contact-form";
+@import "components/galerie";
 
 // Flexible
 
 // Pages
 @import "pages/frontpage";
 @import "pages/skills";
+@import "pages/single-folio";
