--- a/wp-content/themes/herrloc23/assets/css/components/_galerie.scss
+++ b/wp-content/themes/herrloc23/assets/css/components/_galerie.scss
@@ -1,11 +1,23 @@
 .folio-galerie{
-  background-color: var(--color-brown);
-  border-radius: var(--radius-primary);
   padding: clamp(2rem, 5vw, 7rem);
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   list-style-type: none;
   gap: var(--gap);
+  position: relative;
+
+  &::before{
+    content: '';
+    display: block;
+    background-color: var(--color-brown);
+    border-radius: var(--radius-primary);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 70%;
+    transform: translateY(-50%);
+  }
 
   &__single{
     padding: 3.5rem .5rem .5rem;
