--- a/wp-content/themes/herrloc23/views/block/folio.twig
+++ b/wp-content/themes/herrloc23/views/block/folio.twig
@@ -1,6 +1,6 @@
 <section class="portfolio">
 
-    <header class="wrapper portfolio__header" data-anim="top">
+    <header class="wrapper portfolio__header">
         <h2 class="portfolio__header__title">{{ fields.header.titre }}</h2>
         {% if fields.header.description is not empty %}
             <p class="portfolio__header__description">
