--- a/wp-content/themes/herrloc23/views/templates/404.twig
+++ b/wp-content/themes/herrloc23/views/templates/404.twig
@@ -5,7 +5,7 @@
         <div class="p404__content__wrapper">
             <h1>Page introuvable</h1>
             <div class="btn btn--border">
-                <a href="#" class="btn">Retour à l'accueil</a>
+                <a href="{{ site.link }}" class="btn">Retour à l'accueil</a>
             </div>
         </div>
 
