--- a/wp-content/themes/herrloc23/assets/css/components/_galerie.scss
+++ b/wp-content/themes/herrloc23/assets/css/components/_galerie.scss
@@ -1,10 +1,13 @@
 .folio-galerie{
   padding: clamp(2rem, 5vw, 7rem);
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   list-style-type: none;
   gap: var(--gap);
   position: relative;
+
+  @media (width > 1000px){
+    grid-template-columns: repeat(2, 1fr);
+  }
 
   &::before{
     content: '';
