--- a/wp-content/themes/herrloc23/views/template-parts/menu.twig
+++ b/wp-content/themes/herrloc23/views/template-parts/menu.twig
@@ -4,14 +4,16 @@
         <span aria-hidden="true" class="burger__bars"></span>
         <span class="burger__title">{{__('Menu','hloc')}}</span>
     </button>
-    
 
-    <ul id="menuMain" class="header__menu">
-        {% for el in menus.main.items %}
-            <li class="{{ el.class }}">
-                <a href="{{ el.link }}">{{ el.name }}</a>
-            </li>
-        {% endfor %}
-        <span class="header__menu__hover disable" aria-hidden="true" id="hoverElt"></span>
-    </ul>
+    <div class="header__menu">
+        <ul id="menuMain" class="header__menu__wrapper">
+            {% for el in menus.main.items %}
+                <li class="{{ el.class }}">
+                    <a href="{{ el.link }}">{{ el.name }}</a>
+                </li>
+            {% endfor %}
+            <span class="header__menu__hover disable" aria-hidden="true" id="hoverElt"></span>
+        </ul>
+    </div>
+
 </nav>
