--- a/wp-content/themes/herrloc23/assets/css/components/_folio-block.scss
+++ b/wp-content/themes/herrloc23/assets/css/components/_folio-block.scss
@@ -1,10 +1,13 @@
 .portfolio{
   &__header{
-    display: flex;
     align-items: center;
 
+    @media (width > 900px){
+      display: flex;
+    }
+
     &__title{
-      line-height: 1em;
+      line-height: 1.2em;
       text-transform: uppercase;
     }
 
@@ -13,15 +16,19 @@
       display: flex;
       align-items: center;
 
-      &::before{
-        content: '';
-        display: block;
-        height: 0.8rem;
-        width: 0.8rem;
-        background-color: var(--color-primary);
-        border-radius: 1rem;
-        margin-left: 1em;
-        margin-right: 1em;
+      @media (width > 900px) {
+
+        &::before {
+          content: '';
+          display: block;
+          height: 0.8rem;
+          width: 0.8rem;
+          background-color: var(--color-primary);
+          border-radius: 1rem;
+          margin-left: 1em;
+          margin-right: 1em;
+        }
+
       }
     }
   }
