--- a/wp-content/themes/herrloc23/assets/css/components/_folio-list.scss
+++ b/wp-content/themes/herrloc23/assets/css/components/_folio-list.scss
@@ -16,6 +16,13 @@
     display: flex;
     align-items: center;
     color: var(--color-primary);
+    padding-top: clamp(3rem, calc(2rem + 3vw), 10rem);
+    padding-bottom: clamp(3rem, calc(2rem + 3vw), 10rem);
+
+    @media (width < 1000px){
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &__title{
@@ -23,9 +30,7 @@
     font-family: var(--font-secondary);
     font-weight: 300;
     font-size: clamp(3.2rem, calc(1rem + 4vw), 12rem);
-    padding-top: clamp(3rem, calc(2rem + 3vw), 10rem);
-    padding-bottom: clamp(3rem, calc(2rem + 3vw), 10rem);
-    line-height: 1;
+    line-height: 1.2em;
   }
 
   &__thumbnail{
@@ -63,7 +68,13 @@
 
   &__details{
     text-transform: uppercase;
-    text-align: right;
+
+
+    @media (width >= 1000px){
+      text-align: right;
+    }
+
+
 
     &__skill{
       display: flex;
