--- a/wp-content/themes/herrloc23/assets/css/components/_menu.scss
+++ b/wp-content/themes/herrloc23/assets/css/components/_menu.scss
@@ -1,54 +1,109 @@
-.header__menu{
-  --padding: .4rem;
+@media (width > 900px) {
 
-  list-style-type: none;
-  display: flex;
-  border: var(--border);
-  border-radius: var(--radius-primary);
-  height: 100%;
-  padding: var(--padding);
-  position: relative;
+  .header__menu {
+    --padding: .4rem;
 
-  li{
+    list-style-type: none;
     display: flex;
-
-    &:first-child{
-      margin-left: 1rem;
-    }
-
-    &.current_page_item{
-      font-weight: 600;
-    }
-  }
-
-  a{
-    display: flex;
-    height: 100%;
-    align-items: center;
-    color: inherit;
-    text-decoration: none;
-    margin:auto;
-    text-transform: uppercase;
-    font-size: .8em;
-    padding: .5em;
-  }
-
-  .btn{
-    margin-left: 0.5rem;
-  }
-
-  &__hover{
-    transition: all cubic-bezier(.18,.89,.32,1.28) .3s;
-    position: absolute;
-    background-color: var(--color-primary);
-    z-index: -1;
-    height: calc(100% - 2 * var(--padding));
+    border: var(--border);
     border-radius: var(--radius-primary);
-    opacity: .2;
+    height: 100%;
+    padding: var(--padding);
+    position: relative;
 
-    &.disable{
-      opacity: 0;
+    @media (width <= 900px) {
+      display: none;
+    }
+
+    &__wrapper{
+      display: contents;
+    }
+
+    li {
+      display: flex;
+
+      &:first-child {
+        margin-left: 1rem;
+      }
+
+      &.current_page_item {
+        font-weight: 600;
+      }
+    }
+
+    a {
+      display: flex;
+      height: 100%;
+      align-items: center;
+      color: inherit;
+      text-decoration: none;
+      margin: auto;
+      text-transform: uppercase;
+      font-size: .8em;
+      padding: .5em;
+    }
+
+    .btn-menu {
+      margin-left: 0.5rem;
+      a{
+        @include btn();
+      }
+    }
+
+    &__hover {
+      transition: all cubic-bezier(.18, .89, .32, 1.28) .3s;
+      position: absolute;
+      background-color: var(--color-primary);
+      z-index: -1;
+      height: calc(100% - 2 * var(--padding));
+      border-radius: var(--radius-primary);
+      opacity: .2;
+
+      &.disable {
+        opacity: 0;
+      }
     }
   }
+}
 
+@media (width <= 900px) {
+
+  .burger[aria-expanded="false"] + .header__menu{
+    top: -30%;
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  .header__menu{
+    transition: all ease .3s;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 1;
+    background-color: var(--color-primary);
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    a{
+      transition: all ease .3s;
+      font-size: clamp(5rem, 0.3rem + 12vw, 30rem);
+      text-stroke: 1.5px var(--color-white);
+      -webkit-text-stroke: 1.5px var(--color-white);
+      color: transparent;
+      text-transform: uppercase;
+      font-weight: 600;
+      line-height: 1.4;
+      text-decoration: none;
+
+      &:hover{
+        color: var(--color-white);
+      }
+    }
+  }
 }
