--- a/wp-content/themes/herrloc23/assets/css/config/_variables.scss
+++ b/wp-content/themes/herrloc23/assets/css/config/_variables.scss
@@ -30,6 +30,7 @@
   //Margins
   --margin-fluid: clamp(4rem, calc(1rem + 7vh), 10rem);
   --margin-fluid--tiny: clamp(2rem, calc(1rem + 4vh), 7rem);
+  --padding-global: calc(max(3vw, 2rem));
 
   // Borders radius
   --radius-primary: 1rem;
