--- a/wp-content/themes/herrloc23/assets/css/pages/_frontpage.scss
+++ b/wp-content/themes/herrloc23/assets/css/pages/_frontpage.scss
@@ -1,5 +1,8 @@
-.home{
-  .skills{
-    margin-left: 30%;
+@media (width >= 950px){
+  .home{
+    .skills{
+      margin-left: 30%;
+    }
   }
 }
+
