--- a/wp-content/themes/herrloc23/views/template-parts/header.twig
+++ b/wp-content/themes/herrloc23/views/template-parts/header.twig
@@ -1,9 +1,11 @@
 <header class="wrapper header v-hidden">
      <a class="logo" href="{{ site.url }}" data-back="Home">{{ site.title }}</a>
 
+    {#
     <div class="availability">
-        <p><strong>Lorem ipsum :</strong> immédiate</p>
+        <p><strong>Disponibilité :</strong> immédiate</p>
     </div>
+    #}
 
     {% include 'template-parts/menu.twig' %}
 </header>
