--- a/wp-content/themes/herrloc23/assets/css/config/_base.scss
+++ b/wp-content/themes/herrloc23/assets/css/config/_base.scss
@@ -11,7 +11,7 @@ body {
 
 .wrapper {
   width: 100%;
-  max-width: max(500px, 90vw);
+  max-width: min(1800px, 90vw);
   padding-left: var(--gap);
   padding-right: var(--gap);
   margin-left: auto;
