--- a/wp-content/themes/herrloc23/views/base.twig
+++ b/wp-content/themes/herrloc23/views/base.twig
@@ -9,6 +9,15 @@
 
         {{wp_head}}
 
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ theme.link }}/assets/favicons/apple-touch-icon.png?v=23">
+        <link rel="icon" type="image/png" sizes="32x32" href="{{ theme.link }}/assets/favicons/favicon-32x32.png?v=23">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ theme.link }}/assets/favicons/favicon-16x16.png?v=23">
+        <link rel="manifest" href="{{ theme.link }}/assets/favicons/site.webmanifest?v=23">
+        <link rel="mask-icon" href="{{ theme.link }}/assets/favicons/safari-pinned-tab.svg?v=23" color="#e84a4a">
+        <link rel="shortcut icon" href="{{ theme.link }}/assets/favicons/favicon.ico?v=23">
+        <meta name="msapplication-TileColor" content="#fdf5f5">
+        <meta name="theme-color" content="#fdf5f5">
+
         <!-- Matomo -->
         <script>
             var _paq = window._paq = window._paq || [];
