--- a/wp-content/themes/herrloc23/assets/css/config/_base.scss
+++ b/wp-content/themes/herrloc23/assets/css/config/_base.scss
@@ -1,6 +1,10 @@
 html {
 }
 
+.grecaptcha-badge{
+  display: none;
+}
+
 body {
   font-size: var(--p-font-size);
   font-family: var(--font-primary), 'Arial', sans-serif;
