--- a/wp-content/themes/herrloc23/assets/css/config/_variables.scss
+++ b/wp-content/themes/herrloc23/assets/css/config/_variables.scss
@@ -16,7 +16,7 @@
 
   //Fonts
   --font-sansserif: 'Wotfard';
-  --font-serif: 'Source Serif Pro';
+  --font-serif: 'Source Serif 4';
 
   --font-primary: var(--font-sansserif);
   --font-secondary: var(--font-serif);
